--- a/Etl_Finance.ipynb
+++ b/Etl_Finance.ipynb
@@ -42,7 +42,7 @@
     "import pandas as pd \n",
     "from datetime import datetime\n",
     "\n",
-    "df = pd.read_csv('D:\\DIO\\Bootcamp_Santander\\contas_a_pagar.csv', dayfirst=True, parse_dates=['DT VENCIMENTO'], date_parser=lambda x: datetime.strptime(x, '%d/%m/%Y'))\n",
+    "df = pd.read_csv('Local_de_seu_arquivo', dayfirst=True, parse_dates=['DT VENCIMENTO'], date_parser=lambda x: datetime.strptime(x, '%d/%m/%Y'))\n",
     "df.info()"
    ]
   },
